Creacion del home

--- a/app/assets/views/home/home.html
+++ b/app/assets/views/home/home.html
@@ -36,14 +36,14 @@
 		</a>
 	</div>
 </div>
-<div class="row">
+<div class="row first-title">
 	<div class="col-sm-12 ctn-first-title">
 		<h1 class="first-title text-center">ATENCIÓN MÉDICA ONLINE RÁPIDA Y SEGURA</h1>
 		<h4 class="text-center">Conectamos pacientes con profesionales médicos</h4>
 	</div>
 </div>
 <div class="row">
-	<div class="col-md-4" style="padding-right: 0px;">
+	<div class="col-md-4" style="padding-right: 0px; padding-left: 0;">
 		<img src="assets/images/Web-Doctor-Virtual-productos-tabla-1.png" style="width:  100%;">
 		<p style="text-align:  center;font-size: 35px;margin-top: -25px;color:  #00a181;">Medical <strong>message</strong></p>
 		<div style="padding-left: 15px; padding-right: 15px;">
@@ -86,7 +86,110 @@
 		</div>
 	</div>
 </div>
-<div class="row ctn-check">
-	
-
+<div class="ctn-check">
+	<div class="row grey-font">
+		<div class="col-sm-12 col-md-6">
+			<img class="img-fluid" src="assets/images/Web-Doctor-Virtual-productos-menbresia.png" alt="">
+		</div>
+		<div class="col-sm-12 col-md-6">
+			<h1 class="title-middle">Membresía anual</h1>
+			<p>Asistencia médica para todo el año por un solo pago</p>
+			<p class="check-p">
+				<img src="assets/images/icono-lista-docotr.png" alt="">
+				Creación de un perfil
+			</p>
+			<p class="check-p">
+				<img src="assets/images/icono-lista-docotr.png" alt="">
+				Ficha médica para ti y tu familia
+			</p>
+			<p class="check-p">
+				<img src="assets/images/icono-lista-docotr.png" alt="">
+				Chat en línea
+			</p>
+			<p class="check-p">
+				<img src="assets/images/icono-lista-docotr.png" alt="">
+				Vídeo llamada
+			</p>
+			<p class="check-p">
+				<img src="assets/images/icono-lista-docotr.png" alt="">
+				Llamada
+			</p>
+			<p class="check-p">
+				<img src="assets/images/icono-lista-docotr.png" alt="">
+				Descuento para Beneficios de Access
+			</p>
+			<p class="check-pm">Por un año</p>
+			<div class="row">
+				<div class="col-sm-12 col-md-3">
+					<h1 class="title-price">$199.99</h1>
+				</div>
+				<div class="col-sm-12 col-md-1">
+					<img src="assets/images/Web-Doctor-Virtual-productos-carrito.png" alt="">
+				</div>
+				<div class="col-sm-12 col-md-6">
+					<button type="button" class="btn btn-primary btn-lg">¡Compralo hoy!</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="ctn-service">
+	<div class="container">
+		<div class="row text-center">
+			<div class="col-sm-12 text-service">
+				<h1 class="text-center">¿Por qué contratar una membresía anual?</h1>
+				<p class="text-center">Asistencia médica para todo el año por un solo pago, a través de medical message, medicall y video medicall.</p>
+			</div>
+			<div class="col-sm-12 col-md-4 text-center">
+				<img class="img-fluid" src="assets/images/Web-Doctor-Virtual-porque-menbresia-1.png" alt="">
+				<h3 class="text-center title-service">Medical message</h3>
+			</div>
+			<div class="col-sm-12 col-md-4">
+				<img class="img-fluid" src="assets/images/Web-Doctor-Virtual-porque-menbresia-2.png" alt="">
+				<h3 class="text-center title-service">Medi-call</h3>
+			</div>
+			<div class="col-sm-12 col-md-4">
+				<img class="img-fluid" src="assets/images/Web-Doctor-Virtual-porque-menbresia-3.png" alt="">
+				<h3 class="text-center title-service">Video medi-call</h3>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="ctn-info">
+	<div class="row">
+		<div class="col-sm-12 col-md-6 info-texti">
+			<img class="img-fluid" src="assets/images/Web-Doctor-Virtual-4-videos.jpg" alt="">
+			<h1 class="title-info text-center">¿Crees que necesitarás más de 4 video medicall al año?</h1>
+			<p class="text-center">Contrata la membresía anual, ya que cuestan lo mismo,
+pero obtienes muchas más beneficios.</p>
+		</div>
+		<div class="col-sm-12 col-md-6 info-texti">
+			<img class="img-fluid" src="assets/images/Web-Doctor-Virtual-cupon-descuento.jpg" alt="">
+			<h1 class="title-info text-center">Cupones de descuentos</h1>
+			<p class="text-center">Además de la asistencia médica en línea, recibirás cupones de
+descuentos para (nombres de algunas de las tiendas), por un solo pago al
+año podrás ahorrar cientos de dólares en tus compras diarias.</p>
+		</div>
+	</div>
+</div>
+<div class="ctn-price">
+	<div class="container">
+		<div class="row text-center">
+			<div class="col-sm-12 col-md-5">
+				<h1 class="text-center title-price">Membresía anual</h1>
+				<p class="text-center">
+					Asistencia médica para todo el año por un solo pago
+				</p>
+			</div>
+			<div class="col-sm-12 col-md-1">
+				<img src="assets/images/Web-Doctor-Virtual-productos-carrito.png" alt="Compras">
+			</div>
+			<div class="col-sm-12 col-md-4">
+				<button type="button" class="btn btn-primary btn-lg btn-block">¡Compralo hoy!</button>
+			</div>
+			<div class="col-sm-12 col-md-2">
+				<h1 class="text-center title-price">$199.99</h1>
+			</div>
+		</div>
+	</div>
 </div>
