--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -36,8 +36,14 @@ nav.navbar.navbar-expand-lg.navbar-light {
     padding-bottom: 239px !important;
 }
 
+.row {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
 .ctn-first-title {
-    margin: 30px;
+    margin: 30px 0;
+    padding: 0;
 }
 
 .first-title {
@@ -70,6 +76,72 @@ nav.navbar.navbar-expand-lg.navbar-light {
 .ctn-text {
 	color: #999999;
 	margin-top: 30px;
+}
+
+.grey-font {
+  background: #EFF2F1;
+  text-align: left;
+}
+
+.grey-font p {
+  font-size: 19px;
+  color: #232323;
+  padding-bottom: 20px;
+}
+
+.title-middle {
+  margin-top: 40px;
+  font-size: 42px;
+  color: #00a181;
+}
+
+.check-p {
+  font-size: 17px !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  color: #888 !important;
+}
+
+.check-p img {
+  width: 25px;
+}
+
+.check-pm {
+  font-size: 17px !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  color: #888 !important;
+  margin: 10px 0 !important;
+}
+
+.title-price {
+  color: #00a181;
+}
+
+.ctn-service {
+  margin-bottom: 50px;
+}
+
+.text-service {
+  margin-bottom: 20px;
+}
+
+.title-service , .text-service h1 {
+  color: #00a181;
+}
+
+.ctn-info {
+  background: #EFF2F1;
+  padding: 40px 0 0 0;
+}
+
+.title-info {
+  margin-top: 40px;
+  color: #00a181;
+}
+
+.ctn-price {
+  margin: 40px 0;
 }
 
 .last-foot {
