--- a/app/assets/views/home/home.html
+++ b/app/assets/views/home/home.html
@@ -127,7 +127,7 @@
 					<img src="assets/images/Web-Doctor-Virtual-productos-carrito.png" alt="">
 				</div>
 				<div class="col-sm-12 col-md-6">
-					<button type="button" class="btn btn-primary btn-lg">¡Compralo hoy!</button>
+					<button type="button" class="btn btn-primary btn-lg btn-block">¡Compralo hoy!</button>
 				</div>
 			</div>
 		</div>
