--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -144,6 +144,19 @@ nav.navbar.navbar-expand-lg.navbar-light {
   margin: 40px 0;
 }
 
+.ctn-medico {
+  color: #8D8D8D;
+  margin: 150px 0 50px 0;
+}
+
+.ctn-itext {
+  margin: 80px 0;
+}
+
+.ctn-itext h5 {
+  font-weight: bold;
+}
+
 .last-foot {
 		margin-top: 70px;
 }
