--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -144,7 +144,7 @@ nav.navbar.navbar-expand-lg.navbar-light {
   margin: 40px 0;
 }
 
-.ctn-medico {
+.ctn-medico, .ctn-acerca {
   color: #8D8D8D;
   margin: 150px 0 50px 0;
 }
