Creacion de signin

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -145,7 +145,7 @@ nav.navbar.navbar-expand-lg.navbar-light {
 }
 
 .ctn-medico, .ctn-acerca,
-.ctn-funciona {
+.ctn-funciona, .ctn-comprar {
   color: #8D8D8D;
   margin: 150px 0 50px 0;
 }
